codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__plan_update_without_note_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
  Updated Plan
  └ □ Define error taxonomy
    □ Implement mapping to user messages
