codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
  Ran 1 shell command (1 failed)
  └ echo this_i… (exit 1)
    error: first line on st…
    error: second line on s…
