codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__stderr_tail_more_than_five_lines_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
  Ran 1 shell command (1 failed)
  └ seq 1 10 1>&2 && false (exit 1)
    8
    9
    10
